--- a/src/app/above-the-fold/above-the-fold.component.html
+++ b/src/app/above-the-fold/above-the-fold.component.html
@@ -1,10 +1,10 @@
 <div id="atf" class="atf" [class.animationFadeIn]="isVisible">
     <div class="atf-section">
         <div class="atf-undersection">
+            <img src="assets/img/shadows/photo-bgr.svg" alt="Shadow" class="shadow">   
             <div class="atf-content">
                 <div class="photo-div" [class.animationFadeIn]="isVisible">
-                    <img class="profile-img" src="assets/img/piri.png" alt="Piri"> 
-                        <!-- <img src="assets/img/shadows/photo-bgr.svg" alt="Shadow" class="shadow">    -->
+                    <img class="profile-img" src="assets/img/piri.png" alt="Piri">
                 </div>
                 <div class="right-section" [class.animationSlideInRight]="isVisible">
                     <div class="title-div">
