--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,5 +1,6 @@
 <div class="contact" id="contact">
     <div class="contact-content">
+        <img src="assets/img/shadows/contact.svg" alt="Shadow" class="shadow">   
         <div class="contact-div" [class.animationFadeIn]="isVisible">
             <!-- <div class="border"></div> -->
             @if (languageService.language == 'English') {
