--- a/src/app/imprint/imprint.component.scss
+++ b/src/app/imprint/imprint.component.scss
@@ -14,10 +14,10 @@
     flex-direction: column;
     justify-content: center;
     gap: 35px;
-    overflow-x: clip;
-    background-image: url(../../assets/img/shadows/imprint.svg);
-    background-repeat: no-repeat;
-    background-position: 800px -600px;
+    // overflow-x: clip;
+    // background-image: url(../../assets/img/shadows/imprint.svg);
+    // background-repeat: no-repeat;
+    // background-position: 800px -600px;
 
     p {
         text-align: justify;
