--- a/src/app/my-skills/my-skills.component.html
+++ b/src/app/my-skills/my-skills.component.html
@@ -1,5 +1,6 @@
 <div id="skills" class="skills">
     <div class="skills-section">
+        <img src="assets/img/shadows/my-skills.svg" alt="Shadow" class="shadow">   
         <div class="skills-content">
             <div class="icon-div" [class.animationSlideInLeft]="isVisible">
                 <div *ngFor="let icon of icons" class="icons">
