--- a/src/app/privacy-policy/privacy-policy.component.scss
+++ b/src/app/privacy-policy/privacy-policy.component.scss
@@ -13,10 +13,10 @@
     flex-direction: column;
     justify-content: center;
     gap: 35px;
-    overflow-x: clip;
-    background-image: url(../../assets/img/shadows/imprint.svg);
-    background-repeat: no-repeat;
-    background-position: 800px 6500px;
+    // overflow-x: clip;
+    // background-image: url(../../assets/img/shadows/imprint.svg);
+    // background-repeat: no-repeat;
+    // background-position: 800px 6500px;
 
     p {
         text-align: justify;
