--- a/src/app/above-the-fold/above-the-fold.component.scss
+++ b/src/app/above-the-fold/above-the-fold.component.scss
@@ -20,8 +20,21 @@
     justify-content: center;
     background-image: url('../../assets/img/atf-shape.svg');
     background-size: cover;
-    background-position: center 200px;
+    background-position: center 144px;
     background-repeat: no-repeat;
+}
+
+.atf-undersection {
+    position: relative;
+}
+
+.shadow {
+    // width: 690px;
+    // height: 671px;
+    position: absolute;
+    bottom: 10px;
+    right: 562px;
+    z-index: -3;
 }
 
 .atf-content {
@@ -38,10 +51,10 @@
 .photo-div {
     width: 100%;
     height: 100%;
-    background-image: url(../../assets/img/shadows/photo-bgr.svg);
-    background-size: contain;
-    background-position: -44px 112px;
-    background-repeat: no-repeat;
+    // background-image: url(../../assets/img/shadows/photo-bgr.svg);
+    // background-size: contain;
+    // background-position: -44px 112px;
+    // background-repeat: no-repeat;
     z-index: -3;
     opacity: 0;
 }
@@ -51,13 +64,6 @@
     top: 30px;
     height: 620px;
     z-index: -2;
-}
-
-.shadow {
-    position: relative;
-    top: 370px;
-    z-index: -3;
-    transform: scale(1.2);
 }
 
 .right-section {
@@ -169,6 +175,7 @@
     display: flex;
     justify-content: flex-end;
     position: relative;
+    left: 32px;
     bottom: 264px;
 }
 
