--- a/src/app/my-skills/my-skills.component.scss
+++ b/src/app/my-skills/my-skills.component.scss
@@ -10,6 +10,18 @@
     max-width: 1440px;
     height: 100%;
     padding: 37px 0px 37px 100px;
+    position: relative;
+    overflow-y: visible;
+    overflow-x: clip;
+}
+
+.shadow {
+    // width: 428px;
+    // height: 951px;
+    position: absolute;
+    right: 1134px;
+    top: -27px;
+    transform: scaleX(-1) rotate(151deg);
 }
 
 .skills-content {
