--- a/src/app/above-the-fold/above-the-fold.component.html
+++ b/src/app/above-the-fold/above-the-fold.component.html
@@ -1,5 +1,7 @@
 <div id="atf" class="atf" [class.animationFadeIn]="isVisible">
     <div class="atf-section">
+        <img src="assets/img/atf-shape.svg" alt="Shape" class="shape">
+        <img src="assets/img/atf-shape-mobile.svg" alt="Shape" class="shape-mobile">
         <div class="atf-undersection">
             <img src="assets/img/shadows/photo-bgr.svg" alt="Shadow" class="shadow">   
             <div class="atf-content">
