--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -2,8 +2,8 @@
     display: flex;
     justify-content: center;
     scroll-margin-top: 0px;
-    height: 100%;
-    margin-bottom: 114px;
+    // height: 100%;
+    margin-bottom: 174px;
 }
 
 .contact-content {
@@ -19,7 +19,6 @@
     margin-top: 114px;
     padding: 37px 100px;
     position: relative;
-    overflow-y: hidden;
     overflow-x: clip;
 }
 
