--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -1,6 +1,6 @@
 <div id="about-me" class="about-me">
     <div class="about-me-section">
-        <img src="/assets/img/shadows/about-me.svg" alt="Shadow" class="shadow">
+        <!-- <img src="/assets/img/shadows/about-me.svg" alt="Shadow" class="shadow"> -->
         <div class="about-me-content" [class.animationFadeIn]="isVisible">
             @if (languageService.language == 'English') {
             <h2>About me</h2>
