--- a/src/app/above-the-fold/above-the-fold.component.html
+++ b/src/app/above-the-fold/above-the-fold.component.html
@@ -1,9 +1,9 @@
-<div id="atf" class="atf" [class.animationFadeIn]="isVisible">
+<div id="atf" class="atf">
     <div class="atf-section">
         <img src="assets/img/atf-shape.svg" alt="Shape" class="shape">
         <img src="assets/img/atf-shape-mobile.svg" alt="Shape" class="shape-mobile">
         <div class="atf-undersection">
-            <img src="assets/img/shadows/photo-bgr.svg" alt="Shadow" class="shadow">   
+            <img src="assets/img/shadows/photo-bgr.svg" alt="Shadow" class="shadow">
             <div class="atf-content">
                 <div class="photo-div" [class.animationFadeIn]="isVisible">
                     <img class="profile-img" src="assets/img/piri.png" alt="Piri">
@@ -64,5 +64,6 @@
                 </div>
             </div>
         </div>
+        <img src="/assets/img/shadows/about-me.svg" alt="Shadow" class="shadow-1">
     </div>
 </div>
