--- a/src/app/my-skills/my-skills.component.scss
+++ b/src/app/my-skills/my-skills.component.scss
@@ -119,7 +119,7 @@
 .button {
     font-size: 23px;
     line-height: 27.6px;
-    border: 0;
+    border: unset;
     border-radius: 10px;
     padding: 15px 30px;
     box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.25);
