--- a/src/app/above-the-fold/above-the-fold.component.html
+++ b/src/app/above-the-fold/above-the-fold.component.html
@@ -26,7 +26,7 @@
                             }
 
                         </span>
-                        <a href="#contact">
+                        <a href="#contact" class="button-div">
                             @if (languageService.language == 'English') {
                             <button>Let's talk!</button>
                             }
@@ -61,9 +61,9 @@
                         }
                         <img src="assets/img/arrow-down-line.svg" alt="Arrow-down">
                     </div>
+                    <img src="/assets/img/shadows/about-me.svg" alt="Shadow" class="shadow-1">
                 </div>
             </div>
         </div>
-        <img src="/assets/img/shadows/about-me.svg" alt="Shadow" class="shadow-1">
     </div>
 </div>
