--- a/src/app/my-skills/my-skills.component.html
+++ b/src/app/my-skills/my-skills.component.html
@@ -26,7 +26,7 @@
 
                     </div>
                     <div class="button-div">
-                        <a href="#contact">
+                        <a href="#contact" class="button-content">
                             @if (languageService.language == 'English') {
                             <button class="button">Get in touch</button>
                             }
