--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -4,7 +4,8 @@
     justify-content: center;
     border-top: 4px solid var(--light-blue);
     background-color: var(--dark-blue);
-    opacity: 0;
+    position: relative;
+    z-index: 6;
 }
 
 footer {
