--- a/src/app/my-skills/my-skills.component.scss
+++ b/src/app/my-skills/my-skills.component.scss
@@ -1,7 +1,7 @@
 .skills {
     display: flex;
     justify-content: center;
-    scroll-margin-top: 180px;
+    scroll-margin-top: 114px;
     margin-top: 120px;
 }
 
@@ -114,6 +114,12 @@
     width: 100%;
     display: flex;
     justify-content: center;
+    position: relative;
+}
+
+.button-content {
+    display: flex;
+    justify-content: center;
 }
 
 .button {
@@ -128,6 +134,7 @@
     color: white;
     cursor: pointer;
     transition: 125ms ease-out;
+    position: absolute;
 
     &:hover {
         transform: translateY(5px);
