--- a/src/app/above-the-fold/above-the-fold.component.html
+++ b/src/app/above-the-fold/above-the-fold.component.html
@@ -42,7 +42,7 @@
                     <div class="contact-section">
                         <div class="border"></div>
                         <div class="socialmedia-btns">
-                            <a href="https://github.com" target="_blank"><img src="assets/img/github-btn.svg"
+                            <a href="https://github.com/mahapiri" target="_blank"><img src="assets/img/github-btn.svg"
                                     alt="Github"></a>
                             <a href="#contact"><img src="assets/img/mail-btn.svg" alt="E-Mail"></a>
                             <a href="https://linkedin.com" target="_blank"><img src="assets/img/linkedin-btn.svg"
