--- a/src/app/work/work.component.html
+++ b/src/app/work/work.component.html
@@ -15,13 +15,15 @@
                     <p>{{ project.descriptionDe }}</p>
                     }
                     <div class="btn-div flex-start">
-                        @if (languageService.language == 'English') {
-                        <button class="livetest-btn">Live Test</button>
-                        }
-                        @if (languageService.language == 'German') {
-                        <button class="livetest-btn">Jetzt testen</button>
-                        }
-                        <a href="{{ project.git }}">
+                        <a href="{{ project.link }}" target="_blank">
+                            @if (languageService.language == 'English') {
+                            <button class="livetest-btn">Live Test</button>
+                            }
+                            @if (languageService.language == 'German') {
+                            <button class="livetest-btn">Jetzt testen</button>
+                            }
+                        </a>
+                        <a href="{{ project.git }}" target="_blank">
                             <button class="github-btn">Github</button>
                         </a>
                     </div>
@@ -39,13 +41,15 @@
                         <p>{{ project.descriptionDe }}</p>
                         }
                         <div class="btn-div flex-end">
-                            @if (languageService.language == 'English') {
-                            <button class="livetest-btn">Live Test</button>
-                            }
-                            @if (languageService.language == 'German') {
-                            <button class="livetest-btn">Jetzt testen</button>
-                            }
-                            <a href="{{ project.git }}">
+                            <a href="{{ project.link }}" target="_blank">
+                                @if (languageService.language == 'English') {
+                                <button class="livetest-btn">Live Test</button>
+                                }
+                                @if (languageService.language == 'German') {
+                                <button class="livetest-btn">Jetzt testen</button>
+                                }
+                            </a>
+                            <a href="{{ project.git }}" target="_blank">
                                 <button class="github-btn">Github</button>
                             </a>
                         </div>
