edited contact layout

--- a/src/app/above-the-fold/above-the-fold.component.html
+++ b/src/app/above-the-fold/above-the-fold.component.html
@@ -51,18 +51,21 @@
                         <a href="#contact" class="mail-div">hello&#64;pirathib-mahalingam.ch</a>
                     </div>
                 </div>
-                <div class="scroll-div" [class.animationOscillation]="isVisible">
-                    <div class="scroll-section">
-                        @if (languageService.language == 'English') {
-                        <p>Scroll down</p>
-                        }
-                        @if (languageService.language == 'German') {
-                        <p>Scrollen</p>
-                        }
-                        <img src="assets/img/arrow-down-line.svg" alt="Arrow-down">
+                <div>
+                    <div class="scroll-div" [class.animationOscillation]="isVisible">
+                        <div class="scroll-section">
+                            @if (languageService.language == 'English') {
+                            <p>Scroll down</p>
+                            }
+                            @if (languageService.language == 'German') {
+                            <p>Scrollen</p>
+                            }
+                            <img src="assets/img/arrow-down-line.svg" alt="Arrow-down">
+                        </div>
                     </div>
                     <img src="/assets/img/shadows/about-me.svg" alt="Shadow" class="shadow-1">
                 </div>
+
             </div>
         </div>
     </div>
