--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -2,7 +2,7 @@
     <div class="contact-content">
         <img src="assets/img/shadows/contact.svg" alt="Shadow" class="shadow">   
         <div class="contact-div" [class.animationFadeIn]="isVisible">
-            <!-- <div class="border"></div> -->
+            <div class="border"></div>
             @if (languageService.language == 'English') {
             <h2>Contact</h2>
             }
