edited profile img

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,7 +11,7 @@
 }
 
 :root {
-    --dark-blue: rgba(20, 29, 47, 1);
+    --dark-blue: rgb(20, 29, 47);
     --light-blue: rgb(0, 190, 232);
     --purple: rgb(75, 71, 255);
     --white: rgba(255, 255, 255, 1);
