--- a/src/app/above-the-fold/above-the-fold.component.scss
+++ b/src/app/above-the-fold/above-the-fold.component.scss
@@ -13,8 +13,8 @@
 .atf-section {
     width: 100%;
     max-width: 1440px;
-    height: 100%;
-    max-height: 100vh;
+    // height: 100%;
+    // max-height: 100vh;
     display: flex;
     justify-content: center;
     // background-image: url('../../assets/img/atf-shape.svg');
@@ -45,10 +45,10 @@
 .shadow {
     // width: 690px;
     // height: 671px;
-    max-width: 100%;
+    width: 1100px;
     position: absolute;
-    bottom: -110px;
-    right: 500px;
+    bottom: -100px;
+    right: 416px;
     z-index: 0;
 }
 
@@ -85,16 +85,18 @@
 .profile-img {
     position: absolute;
     left: 100px;
-    bottom: 124px;
-    height: 620px;
+    bottom: 117px;
+    height: calc(100% - 114px);
+    max-height: 1000px;
     z-index: -1;
+    transform: scalex(-1);
 }
 
 .right-section {
     text-align: center;
     position: absolute;
     right: 115px;
-    bottom: 433px;
+    bottom: 572px;
     opacity: 0;
     z-index: 1;
 }
@@ -203,7 +205,7 @@
 .contact-div {
     display: flex;
     position: absolute;
-    bottom: 32px;
+    bottom: 44px;
 }
 
 .contact-section {
@@ -219,7 +221,7 @@
     justify-content: flex-end;
     position: absolute;
     right: 0;
-    bottom: 100px;
+    bottom: 112px;
 }
 
 .scroll-section {
@@ -269,22 +271,22 @@
 
 @keyframes oscillation {
     0% {
-        bottom: 100px;
+        bottom: 112px;
     }
 
     25% {
-        bottom: 96px;
+        bottom: 108px;
     }
 
     50% {
-        bottom: 92px;
+        bottom: 104px;
     }
 
     75% {
-        bottom: 96px;
+        bottom: 108pxx;
     }
 
     100% {
-        bottom: 100px;
+        bottom: 112px;
     }
 }
