--- a/src/app/above-the-fold/above-the-fold.component.scss
+++ b/src/app/above-the-fold/above-the-fold.component.scss
@@ -13,8 +13,8 @@
 .atf-section {
     width: 100%;
     max-width: 1440px;
-    // height: 100%;
-    // max-height: 100vh;
+    height: 100%;
+    max-height: 100vh;
     display: flex;
     justify-content: center;
     // background-image: url('../../assets/img/atf-shape.svg');
@@ -45,10 +45,10 @@
 .shadow {
     // width: 690px;
     // height: 671px;
-    width: 1100px;
+    max-width: 100%;
     position: absolute;
-    bottom: -100px;
-    right: 416px;
+    bottom: -37px;
+    right: 616px;
     z-index: 0;
 }
 
@@ -84,19 +84,17 @@
 
 .profile-img {
     position: absolute;
-    left: 100px;
-    bottom: 117px;
-    height: calc(100% - 114px);
-    max-height: 1000px;
+    left: 150px;
+    bottom: 124px;
+    height: 787px;
     z-index: -1;
-    transform: scalex(-1);
 }
 
 .right-section {
     text-align: center;
     position: absolute;
     right: 115px;
-    bottom: 572px;
+    bottom: 433px;
     opacity: 0;
     z-index: 1;
 }
@@ -283,7 +281,7 @@
     }
 
     75% {
-        bottom: 108pxx;
+        bottom: 108px;
     }
 
     100% {
