--- a/src/app/above-the-fold/above-the-fold.component.html
+++ b/src/app/above-the-fold/above-the-fold.component.html
@@ -1,11 +1,11 @@
 <div id="atf" class="atf">
     <div class="atf-section">
-        <img src="assets/img/atf-shape.svg" alt="Shape" class="shape">
+        <img src="assets/img/atf-shape-arm.svg" alt="Shape" class="shape">
         <img src="assets/img/atf-shape-mobile.svg" alt="Shape" class="shape-mobile">
         <div class="atf-undersection">
             <img src="assets/img/shadows/photo-bgr.svg" alt="Shadow" class="shadow">
             <div class="atf-content">
-                <div class="photo-div" [class.animationFadeIn]="isVisible">
+                <div class="photo-div">
                     <img class="profile-img" src="assets/img/piri.png" alt="Piri">
                 </div>
                 <div class="right-section" [class.animationSlideInRight]="isVisible">
