--- a/src/app/my-skills/my-skills.component.scss
+++ b/src/app/my-skills/my-skills.component.scss
@@ -12,7 +12,7 @@
     padding: 37px 0px 37px 100px;
     position: relative;
     overflow-y: visible;
-    overflow-x: clip;
+    // overflow-x: clip;
 }
 
 .shadow {
