--- a/src/app/above-the-fold/above-the-fold.component.html
+++ b/src/app/above-the-fold/above-the-fold.component.html
@@ -1,7 +1,9 @@
 <div id="atf" class="atf">
+    <img src="assets/img/atf-shape.svg" alt="Shape" class="shape">
+    <img src="assets/img/atf-shape-mobile.svg" alt="Shape" class="shape-mobile">
     <div class="atf-section">
-        <img src="assets/img/atf-shape-arm.svg" alt="Shape" class="shape">
-        <img src="assets/img/atf-shape-mobile.svg" alt="Shape" class="shape-mobile">
+        <div class="space"></div>
+
         <div class="atf-undersection">
             <img src="assets/img/shadows/photo-bgr.svg" alt="Shadow" class="shadow">
             <div class="atf-content">
