--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -19,7 +19,7 @@
     margin-top: 114px;
     padding: 37px 100px;
     position: relative;
-    overflow-x: clip;
+    // overflow-x: clip;
 }
 
 .shadow {
