--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -15,7 +15,7 @@
     justify-content: space-between;
     position: relative;
     overflow-y: visible;
-    overflow-x: clip;
+    // overflow-x: clip;
 }
 
 .shadow {
