--- a/src/app/above-the-fold/above-the-fold.component.html
+++ b/src/app/above-the-fold/above-the-fold.component.html
@@ -1,11 +1,9 @@
 <div id="atf" class="atf">
-    <img src="assets/img/atf-shape.svg" alt="Shape" class="shape">
-    <img src="assets/img/atf-shape-mobile.svg" alt="Shape" class="shape-mobile">
     <div class="atf-section">
-        <div class="space"></div>
-
+        <img src="assets/img/atf-shape.svg" alt="Shape" class="shape">
+        <img src="assets/img/atf-shape-mobile.svg" alt="Shape" class="shape-mobile">    
         <div class="atf-undersection">
-            <img src="assets/img/shadows/photo-bgr.svg" alt="Shadow" class="shadow">
+            <!-- <img src="assets/img/shadows/photo-bgr.svg" alt="Shadow" class="shadow"> -->
             <div class="atf-content">
                 <div class="photo-div">
                     <img class="profile-img" src="assets/img/piri.png" alt="Piri">
@@ -65,7 +63,8 @@
                             <img src="assets/img/arrow-down-line.svg" alt="Arrow-down">
                         </div>
                     </div>
-                    <img src="/assets/img/shadows/about-me.svg" alt="Shadow" class="shadow-1">
+                    <div class="shadow-1"></div>
+                    <!-- <img src="/assets/img/shadows/about-me.svg" alt="Shadow" class="shadow-1"> -->
                 </div>
 
             </div>
